[package]
name = "egui-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
bytes = "1.1.0"
crossbeam = "0.8.1"
egui = "0.17.0"
log = "0.4.14"
serde_json = "1.0.79"
thiserror = "1.0.30"
