[package]
name = "channel-server-derive"
version = "0.1.0"
edition = "2021"
authors = ["maxu <imxood@163.com>"]
homepage = "https://github.com/imxood/channel-server"
repository = "https://github.com/imxood/channel-server"
keywords = ["channel", "thread", "sync"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.1.3"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
