[package]
name = "channel_server"
version = "0.1.0"
edition = "2021"
authors = ["maxu <imxood@163.com>"]
keywords = ["channel", "thread", "sync"]
readme = "Readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
bytes = "1.1.0"
crossbeam = "0.8.1"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
inner-derive = { path = "../inner-derive" }
