[package]
name = "channel-server"
version = "0.1.0"
edition = "2021"
authors = ["maxu <imxood@163.com>"]
homepage = "https://github.com/imxood/channel-server"
repository = "https://github.com/imxood/channel-server"
keywords = ["channel", "thread", "sync"]
readme = "Readme.md"
license = "MIT"
description = "crate request/response topic-publish/subject by channels in multithreads"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
bytes = "1.1.0"
crossbeam = "0.8.1"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
channel-server-derive = { path = "../channel-server-derive" }
